# ResonanSC

./: .gitignore  README.md  TRAIN_ROUND.md  plot_round_summary_batch_avg_corr.py  plot_round_summary_bulk_corr_boxplot.py  plot_round_summary_celltype_batch_avg_corr.py  plot_round_summary_celltype_marker_weighted_corr.py  plot_round_summary_merged_block_corr_from_markers.py  plot_round_summary_merged_celltype_corr_from_markers.py  pyproject.toml  run_resonansc.py  run_train_round.py
configs/: default.yaml  train_round.yaml
notebooks/: 01_Initialize.ipynb  02_train.ipynb  03_marker_expression_heatmap.ipynb  04_resonansc_marker_regulation_story.ipynb
src/ResonanSC/: __init__.py  bulk.py  corr.py  feature_selection.py  io.py  mapping.py  mapping_plot.py  merge_align.py  model.py  preprocess.py
