[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resonansc"
version = "0.1.0"
description = "Single-cell RNA/ATAC batch alignment and marker optimization workflow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata",
    "episcanpy",
    "matplotlib",
    "numpy",
    "pandas",
    "pyyaml",
    "scanpy",
    "scipy",
    "seaborn",
    "torch",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
